--- a/groth1.tex
+++ b/groth1.tex
@@ -243,7 +243,7 @@ the dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$, state
 our main result (that they are symmetric functions), and do the first steps of
 its proof (by reducing it to a purely combinatorial statement about the
 existence of an involution with certain properties). In Section \ref{sect.construction}, we describe the idea of constructing this involution in an elementary way without proofs. In Section
-\ref{sect.proof}, we prove various properties of this involution advertised in Section \ref{sect.construction} thus finishing the proof of our main result. In Section \ref{sect.BKclassical}, we
+\ref{sect.proof}, we prove various properties of this involution advertised in Section \ref{sect.construction}, thus finishing the proof of our main result. In Section \ref{sect.BKclassical}, we
 recapitulate the definition of the classical Bender-Knuth involution, and
 show that our involution is a generalization of the latter.
 Finally, in Section \ref{sect.structure} we study the structure of
@@ -383,11 +383,11 @@ $-algebra by $\operatorname*{Sym}$, while using the notation $\Lambda$ for the
 set of all partitions.) Symmetric functions are a classical
 field of research, and are closely related to Young diagrams and tableaux; see
 \cite[Chapter 7]{Stan99}, \cite{Macdon95} and \cite[Chapter 2]{GriRei15} for expositions.
-\end{comment}
 
 \begin{todo}
  Decide whether we want to work over $\Z$ or over an arbitrary commutative field $\mathbf{k}$ with unity. 
 \end{todo}
+\end{comment}
 
 
 A \textit{symmetric function} is defined to be a
@@ -2968,7 +2968,8 @@ Now use Theorem \ref{thm:12rpps}.
  
  Of course, our standing assumption that $\lm$ is connected can be lifted here, because in general, $\g_\lm$ is the product of the analogous power series corresponding to the connected components of $\lm$. So we have obtained a new proof of Theorem \ref{thm.gtilde.symm}.
  
- This also holds for any commutative ring $\kk$ and any $t_1, t_2, t_3, \ldots \in \kk$, since the case we have considered (where $t_1, t_2, t_3, \ldots$ are polynomial indeterminates over $\Z$) is universal. 
+% This also holds for any commutative ring $\kk$ and any $t_1, t_2, t_3, \ldots \in \kk$, since the case we have considered (where $t_1, t_2, t_3, \ldots$ are polynomial indeterminates over $\Z$) is universal.
+% [DG] The previous line only makes sense if we define the $\g_\lm$ in the general setting. Since we currently don't, let's skip it.
 
 Another application of Theorem \ref{thm:12rpps} is a complete description of Bender-Knuth involutions on rpps.
 
