--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -3855,7 +3855,7 @@ s_{v}\right)  \cdot a\overset{\ast}{\Rrightarrow}\left(  s_{v}s_{v-1}%
 s_{v}\right)  \cdot a$, we obtain $s_{v}\cdot a\overset{\ast}{\Rrightarrow
 }\left(  s_{v}s_{v-1}s_{v}\right)  \cdot a$ (since the relation $\overset{\ast
 }{\Rrightarrow}$ is transitive). In other words, $c\overset{\ast
-}{\Rrightarrow}d$ (since $b=s_{v}\cdot a$ and $d=\left(  s_{v}s_{v-1}%
+}{\Rrightarrow}d$ (since $c=s_{v}\cdot a$ and $d=\left(  s_{v}s_{v-1}%
 s_{v}\right)  \cdot a$).
 
 Altogether, we now know that $b\overset{\ast}{\Rrightarrow}d$ and
